<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>2.5.8</version>
        <relativePath/> <!-- lookup parent from repository -->
    </parent>
    <groupId>com.kevinguanchedarias.owge</groupId>
    <artifactId>owgejava-backend</artifactId>
    <version>0.11.0-SNAPSHOT</version>
    <name>OWGE Business</name>
    <url>http://owgejava.kevinguanchedarias.com</url>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <dbh2.version>1.4.187</dbh2.version>
        <quartz.version>2.2.3</quartz.version>
        <sonar.projectKey>KevinGuancheDarias_owge</sonar.projectKey>
        <sonar.moduleKey>${project.groupId}:${project.artifactId}</sonar.moduleKey>
        <sonar.organization>kevinguanchedarias</sonar.organization>
        <sonar.host.url>https://sonarcloud.io</sonar.host.url>
        <sonar.exclusions>
            **/*Bean.java,
            **/*Dto.java,
            **/*Request.java,
            **/*Response.java,
            **/*Configuration.java,
            **/com/kevinguanchedarias/owgejava/entity/**/*,
            **/com/kevinguanchedarias/owgejava/pojo/**/*,
            **/com/kevinguanchedarias/owgejava/security/**/*,
            **/com/kevinguanchedarias/owgejava/mock/**/*
        </sonar.exclusions>
        <sonar.report>target/site/jacoco/jacoco.xml</sonar.report>
    </properties>

    <repositories>
        <repository>
            <id>jitpack.io</id>
            <url>https://jitpack.io</url>
        </repository>
    </repositories>


    <dependencies>
        <!-- https://mvnrepository.com/artifact/com.corundumstudio.socketio/netty-socketio -->
        <dependency>
            <groupId>com.corundumstudio.socketio</groupId>
            <artifactId>netty-socketio</artifactId>
            <version>1.7.18</version>
        </dependency>

        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter</artifactId>
            <exclusions>
                <exclusion>
                    <groupId>org.springframework.boot</groupId>
                    <artifactId>spring-boot-starter-logging</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>com.fasterxml.jackson.datatype</groupId>
            <artifactId>jackson-datatype-jsr310</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-log4j2</artifactId>
        </dependency>
        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-1.2-api</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-quartz</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-data-jpa</artifactId>
        </dependency>

        <dependency>
            <groupId>org.springframework.retry</groupId>
            <artifactId>spring-retry</artifactId>
        </dependency>

        <!-- END timing features -->

        <!-- https://mvnrepository.com/artifact/com.google.code.gson/gson -->
        <dependency>
            <groupId>com.google.code.gson</groupId>
            <artifactId>gson</artifactId>
        </dependency>

        <!-- Used mainly for EnumUtils.isValidEnum() -->
        <!-- https://mvnrepository.com/artifact/org.apache.commons/commons-lang3 -->
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-lang3</artifactId>
        </dependency>

        <dependency>
            <groupId>org.apache.tika</groupId>
            <artifactId>tika-core</artifactId>
            <version>1.22</version>
        </dependency>

        <dependency>
            <groupId>com.github.KevinGuancheDarias</groupId>
            <artifactId>kevinsuite-java-backend-commons</artifactId>
            <version>v0.1.0</version>
        </dependency>

        <dependency>
            <groupId>com.github.KevinGuancheDarias</groupId>
            <artifactId>kevinsuite-java-rest-commons</artifactId>
            <version>v0.4.1</version>
        </dependency>

        <dependency>
            <groupId>com.github.KevinGuancheDarias</groupId>
            <artifactId>taggable-cache</artifactId>
            <version>v0.1.3</version>
        </dependency>

        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
        </dependency>

        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-test</artifactId>
            <scope>test</scope>
            <exclusions>
                <exclusion>
                    <artifactId>mockito-core</artifactId>
                    <groupId>org.mockito</groupId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <artifactId>mockito-inline</artifactId>
            <groupId>org.mockito</groupId>
            <scope>test</scope>
        </dependency>
    </dependencies>
    <build>

        <finalName>owgejava-backend</finalName>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>17</source>
                    <target>17</target>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
                <executions>
                    <execution>
                        <id>attach-sources</id>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <configuration>
                    <archive>
                        <manifest>
                            <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
                            <addDefaultSpecificationEntries>true</addDefaultSpecificationEntries>
                        </manifest>
                    </archive>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.jacoco</groupId>
                <artifactId>jacoco-maven-plugin</artifactId>
                <version>0.8.7</version>
                <configuration>
                    <excludes>
                        <exclude>**/*Bean.*</exclude>
                        <exclude>**/*Dto.*</exclude>
                        <exclude>**/*Request.*</exclude>
                        <exclude>**/*Response.*</exclude>
                        <exclude>**/*Configuration.*</exclude>
                        <exclude>**/com/kevinguanchedarias/owgejava/entity/**/*</exclude>
                        <exclude>**/com/kevinguanchedarias/owgejava/pojo/**/*</exclude>
                        <exclude>**/com/kevinguanchedarias/owgejava/security/**/*</exclude>
                    </excludes>
                </configuration>
            </plugin>
        </plugins>
    </build>

</project>